--- a/index.ipynb
+++ b/index.ipynb
@@ -131,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "italy = Italy # 'Italy'\n",
+    "italy # 'Italy'\n",
     "Italy"
    ]
   },
