--- a/index.ipynb
+++ b/index.ipynb
@@ -210,13 +210,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_neighbors = None\n",
+    "kindof_neighbors = countries[2:4]\n",
     "kindof_neighbors"
    ]
   },
