--- a/index.ipynb
+++ b/index.ipynb
@@ -251,7 +251,7 @@
    },
    "outputs": [],
    "source": [
-    "countries.append = Th # add code here"
+    "countries.append = \"Thalind\" # add code here"
    ]
   },
   {
